# Divisibility-Operator

./: README.md  a.out  analysis.ipynb  bigint.cpp  bigint.h  dividend_log.txt  main.cpp
Web_UI/source/: CMakeLists.txt  bigint.cpp  bigint.h  bigint_application.cpp  bigint_application.h  bigint_application_main.C  build_app.sh
code/: bigint.cpp  build.sh  dividend.txt  divisor.txt  main.cpp  ~$big_primes_II_data.xlsx
logs/: Runtimes.ipynb  dividend_log.txt  divisor_log.txt
logs/.ipynb_checkpoints/: Runtimes-checkpoint.ipynb
main/: main.cpp  main_dividend.cpp  main_divisor.cpp
scripts/: a.out  run.sh  run_dividend.sh  run_divisor.sh
source/: a.out
source/header/: bigint.h
source/main/: main.cpp  main_dividend.cpp  main_divisor.cpp
source/module/: bigint.cpp
